--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,7 +83,8 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Map.Map
-GameDefaultMap=/Game/Map.Map
+GameDefaultMap=/Game/StartMap.StartMap
+bUseSplitscreen=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
