--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,12 +3,12 @@ ProjectID=1AAEABEF4746FB3D1DB8268B093285D1
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 StagingDirectory=(Path="")
 FullRebuild=False
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
-BlueprintNativizationMethod=Disabled
+BlueprintNativizationMethod=Inclusive
 +NativizeBlueprintAssets=(FilePath="/Game/Blueprint/BP_ChessBase")
 bIncludeNativizedAssetsInProjectGeneration=False
 UsePakFile=True
@@ -35,5 +35,4 @@ bEncryptPakIndex=False
 bSkipEditorContent=False
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
