--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1AAEABEF4746FB3D1DB8268B093285D1
+ProjectName=Unreal Chess
+Description=Chess game.
+ProjectVersion=0.1
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C4B04A8A4BC64B5A27390C92F561D1B4", "UnrealChess")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -8,7 +12,7 @@ StagingDirectory=(Path="")
 FullRebuild=False
 ForDistribution=True
 IncludeDebugFiles=False
-BlueprintNativizationMethod=Inclusive
+BlueprintNativizationMethod=Disabled
 +NativizeBlueprintAssets=(FilePath="/Game/Blueprint/BP_ChessBase")
 bIncludeNativizedAssetsInProjectGeneration=False
 UsePakFile=True
