--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,7 +30,7 @@ r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
-r.PostProcessing.PropagateAlpha=False
+r.PostProcessing.PropagateAlpha=1
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
@@ -49,6 +49,7 @@ r.ClearSceneMethod=1
 r.BasePassOutputsVelocity=False
 r.SelectiveBasePassOutputs=False
 bDefaultParticleCutouts=False
+bEnableAlphaChannelInPostProcessing=False
 r.AllowGlobalClipPlane=False
 r.GBufferFormat=1
 r.MorphTarget.Mode=True
@@ -60,13 +61,13 @@ vr.MobileMultiView.Direct=False
 vr.MonoscopicFarField=False
 vr.DebugCanvasInLayer=False
 r.WireframeCullThreshold=5.000000
-r.SupportStationarySkylight=True
-r.SupportLowQualityLightmaps=True
-r.SupportPointLightWholeSceneShadows=True
+r.SupportStationarySkylight=False
+r.SupportLowQualityLightmaps=False
+r.SupportPointLightWholeSceneShadows=False
 r.SupportAtmosphericFog=True
 r.SkinCache.CompileShaders=False
-r.Mobile.EnableStaticAndCSMShadowReceivers=True
-r.Mobile.AllowDistanceFieldShadows=True
+r.Mobile.EnableStaticAndCSMShadowReceivers=False
+r.Mobile.AllowDistanceFieldShadows=False
 r.Mobile.AllowMovableDirectionalLights=True
 r.MobileNumDynamicPointLights=4
 r.MobileDynamicPointLightsUseStaticBranch=True
