--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,7 +83,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map.Map
+EditorStartupMap=/Game/StartMap.StartMap
 GameDefaultMap=/Game/StartMap.StartMap
 bUseSplitscreen=False
 
